feat(CAT-FR-LM-01): some cleanup